Update wiki-java submodule, dependencies and legacy code